Bug 139941 - FILEOPEN: Wrong transparency in 3D object
Summary: FILEOPEN: Wrong transparency in 3D object
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
: 139849 139880 139887 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-27 09:36 UTC by Xisco Faulí
Modified: 2021-01-28 09:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.2 master (61.83 KB, image/png)
2021-01-27 09:36 UTC, Xisco Faulí
Details
another file affected by the same issue (37.00 KB, application/vnd.ms-powerpoint)
2021-01-27 09:39 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-01-27 09:36:27 UTC
Created attachment 169174 [details]
Comparison MSO 2010 and LibreOffice 7.2 master

Steps to reproduce:
1. Open attachment 79516 [details] from bug 64757

-> The 3D object is black and white. it should be pink

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: f2389a70da606768a39ee599de6a5b24058734aa
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2021-01-27 09:37:27 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=508c2e4a2d2b26d6b1842ff98e9aaa4d3adddf80

author	Noel Grandin <noelgrandin@gmail.com>	2021-01-16 11:52:40 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-01-16 17:47:57 +0100
commit 508c2e4a2d2b26d6b1842ff98e9aaa4d3adddf80 (patch)
tree 2de868966e0802cbbe66c6008f8eec6aea75b74f
parent 1cc0fc1f3cdae597912d7204256427e060fcde61 (diff)
transparency->alpha in vcl::RawBitmap

Bisected with: bibisect-linux64-7.2

Adding Cc: to Noel Grandin
Comment 2 Xisco Faulí 2021-01-27 09:39:14 UTC
Created attachment 169175 [details]
another file affected by the same issue
Comment 3 Xisco Faulí 2021-01-27 10:02:01 UTC
3D charts are also affected -> attachment 164818 [details] from bug 136235
Comment 4 Xisco Faulí 2021-01-27 10:07:50 UTC
*** Bug 139887 has been marked as a duplicate of this bug. ***
Comment 5 Regina Henschel 2021-01-27 10:54:03 UTC
*** Bug 139880 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2021-01-27 13:02:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ae95f438cf7eaa3a1a21583432a0158a445969bf

tdf#139941 wrong transparency in 3D object

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2021-01-28 09:24:49 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 7eb289c49cc7245ef3001a39be0c15d06bbe875b
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Noel, thanks for fixing this issue!

Closing as VERIFIED FIXED!!
Comment 8 Xisco Faulí 2021-01-28 09:26:02 UTC
*** Bug 139849 has been marked as a duplicate of this bug. ***