tdf#139941 wrong transparency in 3D object

regression from
    commit 508c2e4a2d2b26d6b1842ff98e9aaa4d3adddf80
    transparency->alpha in vcl::RawBitmap

Change-Id: I45a1759fb9a78bc0fc5caa4a5b5362eaddc6f743
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110010
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>